--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#850606</color>
     <color name="colorPrimaryDark">#FF0000</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="white" />
 </resources>
