--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".RegisActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:layout_gravity="center"
         android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
         <ProgressBar
@@ -27,9 +26,12 @@
     </androidx.appcompat.widget.Toolbar>
 
     <EditText
-        android:id="@+id/etEmail"
-        android:layout_width="match_parent"
+        android:id="@+id/etUserEmail"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -37,9 +39,11 @@
         tools:layout_editor_absoluteY="152dp" />
 
     <EditText
-        android:id="@+id/etPassword"
-        android:layout_width="match_parent"
+        android:id="@+id/etUserPassword"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="20dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -47,18 +51,26 @@
         tools:layout_editor_absoluteY="214dp" />
 
     <Button
-        android:id="@+id/btnSignup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Sign up"
-        tools:layout_editor_absoluteX="222dp"
-        tools:layout_editor_absoluteY="273dp" />
-
-    <Button
-        android:id="@+id/btnSignin"
-        android:layout_width="match_parent"
+        android:id="@+id/btnUserSignin"
+        android:layout_width="300dp"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:text="Login"
+        tools:layout_editor_absoluteX="98dp"
+        tools:layout_editor_absoluteY="273dp" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="300dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/btnSignup"
+        android:layout_width="300dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:text="Register"
         tools:layout_editor_absoluteX="98dp"
         tools:layout_editor_absoluteY="273dp" />
 
