--- a/app/src/main/res/layout/activity_regis.xml
+++ b/app/src/main/res/layout/activity_regis.xml
@@ -4,30 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_centerInParent="false"
+    android:layout_centerHorizontal="false"
+    android:layout_centerVertical="false"
+    android:isScrollContainer="false"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    android:layout_gravity="center"
+    tools:context=".MainActivity">
+
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar2"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:visibility="gone" />
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:visibility="gone" />
 
     </androidx.appcompat.widget.Toolbar>
 
     <EditText
-        android:id="@+id/etUserEmail"
-        android:layout_width="match_parent"
+        android:id="@+id/etEmail"
+        android:layout_width="330dp"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Email"
@@ -35,11 +43,10 @@
         tools:layout_editor_absoluteX="98dp"
         tools:layout_editor_absoluteY="152dp" />
 
-
-
     <EditText
-        android:id="@+id/etUserPassword"
-        android:layout_width="match_parent"
+        android:id="@+id/etPassword"
+        android:layout_width="330dp"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Password"
@@ -48,16 +55,21 @@
         tools:layout_editor_absoluteY="214dp" />
 
     <Button
-        android:id="@+id/btnUserSignin"
+        android:id="@+id/btnSignup"
         android:layout_width="300dp"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
-        android:text="เข้าสู่ระบบ"
-        tools:layout_editor_absoluteX="98dp"
+        android:text="Sign up"
+        tools:layout_editor_absoluteX="222dp"
         tools:layout_editor_absoluteY="273dp" />
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
+    <Button
+        android:id="@+id/btnSignin"
         android:layout_width="300dp"
-        android:layout_height="wrap_content" />
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        tools:layout_editor_absoluteX="98dp"
+        tools:layout_editor_absoluteY="273dp" />
 
 </LinearLayout>
