--- a/app/src/main/res/layout/activity_regis.xml
+++ b/app/src/main/res/layout/activity_regis.xml
@@ -12,25 +12,24 @@
     android:layout_gravity="center"
     tools:context=".MainActivity">
 
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark">
-
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:visibility="gone" />
+            android:visibility="gone"
+            android:minHeight="50dp"
+            android:minWidth="50dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
 
-    </androidx.appcompat.widget.Toolbar>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/progressBar"
+        android:layout_below="@+id/progressBar"/>
 
     <EditText
         android:id="@+id/etEmail"
@@ -60,6 +59,8 @@
         android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:text="Sign up"
+        android:textColor="@color/colorPrimary"
+        android:background="@drawable/outline_button"
         tools:layout_editor_absoluteX="222dp"
         tools:layout_editor_absoluteY="273dp" />
 
@@ -69,6 +70,10 @@
         android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:text="Login"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:textColor="@color/colorPrimary"
+        android:background="@drawable/outline_button"
         tools:layout_editor_absoluteX="98dp"
         tools:layout_editor_absoluteY="273dp" />
 
