--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="progressBar" type="id" />
     <item name="toolbar" type="id" />
+    <item name="editTextDetailName" type="id" />
 </resources>
