--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -36,8 +36,27 @@
             android:layout_marginBottom="38dp"
             android:text="ออกจากระบบ" />
 
+
         <TextView
             android:id="@+id/userEmail"
+            android:layout_width="332dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/userLogout"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginEnd="38dp"
+            android:layout_marginRight="38dp"
+            android:layout_marginBottom="179dp"
+            android:gravity="center"
+            android:text="TextView"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/userName"
             android:layout_width="332dp"
             android:layout_height="wrap_content"
             android:layout_above="@+id/userLogout"
@@ -49,20 +68,20 @@
             android:layout_marginLeft="41dp"
             android:layout_marginEnd="37dp"
             android:layout_marginRight="37dp"
-            android:layout_marginBottom="17dp"
+            android:layout_marginBottom="203dp"
             android:gravity="center"
             android:text="TextView" />
 
         <ImageView
             android:id="@+id/imageProfile"
-            android:layout_width="242dp"
-            android:layout_height="154dp"
+            android:layout_width="238dp"
+            android:layout_height="175dp"
             android:layout_above="@+id/userEmail"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginEnd="85dp"
-            android:layout_marginRight="85dp"
-            android:layout_marginBottom="232dp"
+            android:layout_marginEnd="82dp"
+            android:layout_marginRight="82dp"
+            android:layout_marginBottom="64dp"
             android:paddingTop="15dp" />
     </RelativeLayout>
 
